# ar-parallel-solver

./: .gitignore  CMakeLists.txt  README.md  log_splitter.py  main.cpp  merge_results.py  merge_results.sh  plot.gp  plot_pth.gp  plot_pth_frames.gp  pth_preview.sh  sync_with_superc.sh  xresults_from_superc.sh  zresults_from_pth.sh
src/: NonCopyable.h  par_async.cpp  parallel.cpp  parallel_async.cpp  parallel_gap.cpp  parallel_lb.cpp  parallel_ts.cpp  seq.cpp  shared.h
superc/icm/: bootstrapper.sh  script.sh
superc/pth/: bootstrapper.sh  build.sh  run.sh  script.sh
superc/pth/tests/: common.py  executor.py  scheduler.py  t0_executor.py  t0_scheduler.py  t1_executor.py  t1_scheduler.py  wrapper.sh
superc/wcss/: bootstrapper.sh  script.sh
superc/zeus/: bootstrapper.sh  script.sh
